Hitting and pitching data from baseball savant have been fetched and cleaned

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,18 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Loading Data\n",
-    "hitting = pd.read_csv('baseball_savant_hitting.csv')\n",
+    "hitting = pd.read_csv('baseball_savant_hitting.csv').drop(columns=['fast_swing_rate', 'avg_swing_speed', 'blasts_contact', 'blasts_swing', 'squared_up_contact', 'squared_up_swing',]).dropna()\n",
     "pitching = pd.read_csv('baseball_savant_pitching.csv').drop(columns=['p_opp_batting_avg', 'p_opp_on_base_avg'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
