Prepared Kaggle Data

--- a/main.ipynb
+++ b/main.ipynb
@@ -11,6 +11,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Baseball Savant"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 103,
    "metadata": {},
@@ -49,6 +56,348 @@
     "curveballs['cu_weight'] = curveballs['n_cu_formatted'] * curveballs['pa'] / 100\n",
     "sinkers['si_weight'] = sinkers['n_si_formatted'] * sinkers['pa'] / 100\n",
     "cutters['fc_weight'] = cutters['n_fc_formatted'] * cutters['pa'] / 100\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Kaggle - Aggregating by Team"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Batting Data - see readme.txt for description of batting stats\n",
+    "team_batting = pd.read_csv('Kaggle/Batting.csv')[['teamID', 'yearID', 'AB', 'H', '2B', '3B', 'HR', 'BB', 'SO', 'IBB', 'HBP', 'SH', 'SF']].dropna().groupby(['teamID', 'yearID']).sum()\n",
+    "team_batting['PA'] = team_batting['AB'] + team_batting['BB'] + team_batting['SF'] + team_batting['SH'] + team_batting['HBP']\n",
+    "team_batting['AVG'] = team_batting['H'] / team_batting['AB']\n",
+    "team_batting['OBP'] = (team_batting['BB'] + team_batting['HBP'] + team_batting['H']) / team_batting['PA']\n",
+    "team_batting['SLG'] = (team_batting['H'] + team_batting['2B'] + 2 * team_batting['3B'] + 3 * team_batting['HR']) / team_batting['AB']\n",
+    "team_batting['OPS'] = team_batting['OBP'] + team_batting['SLG']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Pitching Data - just ERA\n",
+    "team_pitching = pd.read_csv('Kaggle/Pitching.csv')[['teamID', 'yearID', 'ER', 'IPouts']].dropna().groupby(['teamID', 'yearID']).sum()\n",
+    "team_pitching['ERA'] = 27 * team_pitching['ER'] / team_pitching['IPouts']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Salary Data\n",
+    "team_salaries = pd.read_csv('Kaggle/Salaries.csv')[['teamID', 'yearID', 'salary']].dropna().groupby(['teamID', 'yearID']).sum()\n",
+    "year_salaries = team_salaries.groupby('yearID').mean()\n",
+    "team_salaries = team_salaries.join(year_salaries, on='yearID', rsuffix='_league_avg')\n",
+    "team_salaries['salary/avg_salary'] = team_salaries['salary'] / team_salaries['salary_league_avg'] # comparing team salary to average team salary that year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 246,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>AVG</th>\n",
+       "      <th>OBP</th>\n",
+       "      <th>SLG</th>\n",
+       "      <th>OPS</th>\n",
+       "      <th>avg_runs_scored</th>\n",
+       "      <th>ERA</th>\n",
+       "      <th>avg_runs_allowed</th>\n",
+       "      <th>salary</th>\n",
+       "      <th>salary/avg_salary</th>\n",
+       "      <th>G</th>\n",
+       "      <th>W%</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>teamID</th>\n",
+       "      <th>yearID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">ANA</th>\n",
+       "      <th>1997</th>\n",
+       "      <td>Anaheim Angels</td>\n",
+       "      <td>0.272033</td>\n",
+       "      <td>0.343354</td>\n",
+       "      <td>0.416311</td>\n",
+       "      <td>0.759665</td>\n",
+       "      <td>5.117284</td>\n",
+       "      <td>4.516499</td>\n",
+       "      <td>4.901235</td>\n",
+       "      <td>31135472.0</td>\n",
+       "      <td>0.773356</td>\n",
+       "      <td>162</td>\n",
+       "      <td>0.518519</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1998</th>\n",
+       "      <td>Anaheim Angels</td>\n",
+       "      <td>0.271758</td>\n",
+       "      <td>0.332590</td>\n",
+       "      <td>0.415453</td>\n",
+       "      <td>0.748043</td>\n",
+       "      <td>4.858025</td>\n",
+       "      <td>4.487535</td>\n",
+       "      <td>4.833333</td>\n",
+       "      <td>41281000.0</td>\n",
+       "      <td>0.968823</td>\n",
+       "      <td>162</td>\n",
+       "      <td>0.524691</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1999</th>\n",
+       "      <td>Anaheim Angels</td>\n",
+       "      <td>0.255552</td>\n",
+       "      <td>0.319361</td>\n",
+       "      <td>0.394976</td>\n",
+       "      <td>0.714337</td>\n",
+       "      <td>4.388889</td>\n",
+       "      <td>4.791337</td>\n",
+       "      <td>5.098765</td>\n",
+       "      <td>55388166.0</td>\n",
+       "      <td>1.112042</td>\n",
+       "      <td>162</td>\n",
+       "      <td>0.432099</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000</th>\n",
+       "      <td>Anaheim Angels</td>\n",
+       "      <td>0.279673</td>\n",
+       "      <td>0.349757</td>\n",
+       "      <td>0.472459</td>\n",
+       "      <td>0.822216</td>\n",
+       "      <td>5.333333</td>\n",
+       "      <td>5.015884</td>\n",
+       "      <td>5.364198</td>\n",
+       "      <td>51464167.0</td>\n",
+       "      <td>0.926651</td>\n",
+       "      <td>162</td>\n",
+       "      <td>0.506173</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001</th>\n",
+       "      <td>Anaheim Angels</td>\n",
+       "      <td>0.260674</td>\n",
+       "      <td>0.324385</td>\n",
+       "      <td>0.404972</td>\n",
+       "      <td>0.729357</td>\n",
+       "      <td>4.265432</td>\n",
+       "      <td>4.200556</td>\n",
+       "      <td>4.506173</td>\n",
+       "      <td>47535167.0</td>\n",
+       "      <td>0.727333</td>\n",
+       "      <td>162</td>\n",
+       "      <td>0.462963</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">WAS</th>\n",
+       "      <th>2011</th>\n",
+       "      <td>Washington Nationals</td>\n",
+       "      <td>0.242419</td>\n",
+       "      <td>0.304433</td>\n",
+       "      <td>0.382650</td>\n",
+       "      <td>0.687084</td>\n",
+       "      <td>3.875776</td>\n",
+       "      <td>3.583027</td>\n",
+       "      <td>3.993789</td>\n",
+       "      <td>63856928.0</td>\n",
+       "      <td>0.687989</td>\n",
+       "      <td>161</td>\n",
+       "      <td>0.496894</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012</th>\n",
+       "      <td>Washington Nationals</td>\n",
+       "      <td>0.261443</td>\n",
+       "      <td>0.319563</td>\n",
+       "      <td>0.427605</td>\n",
+       "      <td>0.747167</td>\n",
+       "      <td>4.512346</td>\n",
+       "      <td>3.340522</td>\n",
+       "      <td>3.666667</td>\n",
+       "      <td>80855143.0</td>\n",
+       "      <td>0.827095</td>\n",
+       "      <td>162</td>\n",
+       "      <td>0.604938</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013</th>\n",
+       "      <td>Washington Nationals</td>\n",
+       "      <td>0.251104</td>\n",
+       "      <td>0.309079</td>\n",
+       "      <td>0.397535</td>\n",
+       "      <td>0.706614</td>\n",
+       "      <td>4.049383</td>\n",
+       "      <td>3.585889</td>\n",
+       "      <td>3.864198</td>\n",
+       "      <td>113703270.0</td>\n",
+       "      <td>1.124096</td>\n",
+       "      <td>162</td>\n",
+       "      <td>0.530864</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014</th>\n",
+       "      <td>Washington Nationals</td>\n",
+       "      <td>0.253158</td>\n",
+       "      <td>0.317889</td>\n",
+       "      <td>0.392999</td>\n",
+       "      <td>0.710888</td>\n",
+       "      <td>4.234568</td>\n",
+       "      <td>3.029238</td>\n",
+       "      <td>3.425926</td>\n",
+       "      <td>131983680.0</td>\n",
+       "      <td>1.240325</td>\n",
+       "      <td>162</td>\n",
+       "      <td>0.592593</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015</th>\n",
+       "      <td>Washington Nationals</td>\n",
+       "      <td>0.251105</td>\n",
+       "      <td>0.318130</td>\n",
+       "      <td>0.402542</td>\n",
+       "      <td>0.720672</td>\n",
+       "      <td>4.339506</td>\n",
+       "      <td>3.619656</td>\n",
+       "      <td>3.919753</td>\n",
+       "      <td>155587472.0</td>\n",
+       "      <td>1.328240</td>\n",
+       "      <td>162</td>\n",
+       "      <td>0.512346</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>888 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               name       AVG       OBP       SLG       OPS  \\\n",
+       "teamID yearID                                                                 \n",
+       "ANA    1997          Anaheim Angels  0.272033  0.343354  0.416311  0.759665   \n",
+       "       1998          Anaheim Angels  0.271758  0.332590  0.415453  0.748043   \n",
+       "       1999          Anaheim Angels  0.255552  0.319361  0.394976  0.714337   \n",
+       "       2000          Anaheim Angels  0.279673  0.349757  0.472459  0.822216   \n",
+       "       2001          Anaheim Angels  0.260674  0.324385  0.404972  0.729357   \n",
+       "...                             ...       ...       ...       ...       ...   \n",
+       "WAS    2011    Washington Nationals  0.242419  0.304433  0.382650  0.687084   \n",
+       "       2012    Washington Nationals  0.261443  0.319563  0.427605  0.747167   \n",
+       "       2013    Washington Nationals  0.251104  0.309079  0.397535  0.706614   \n",
+       "       2014    Washington Nationals  0.253158  0.317889  0.392999  0.710888   \n",
+       "       2015    Washington Nationals  0.251105  0.318130  0.402542  0.720672   \n",
+       "\n",
+       "               avg_runs_scored       ERA  avg_runs_allowed       salary  \\\n",
+       "teamID yearID                                                             \n",
+       "ANA    1997           5.117284  4.516499          4.901235   31135472.0   \n",
+       "       1998           4.858025  4.487535          4.833333   41281000.0   \n",
+       "       1999           4.388889  4.791337          5.098765   55388166.0   \n",
+       "       2000           5.333333  5.015884          5.364198   51464167.0   \n",
+       "       2001           4.265432  4.200556          4.506173   47535167.0   \n",
+       "...                        ...       ...               ...          ...   \n",
+       "WAS    2011           3.875776  3.583027          3.993789   63856928.0   \n",
+       "       2012           4.512346  3.340522          3.666667   80855143.0   \n",
+       "       2013           4.049383  3.585889          3.864198  113703270.0   \n",
+       "       2014           4.234568  3.029238          3.425926  131983680.0   \n",
+       "       2015           4.339506  3.619656          3.919753  155587472.0   \n",
+       "\n",
+       "               salary/avg_salary    G        W%  \n",
+       "teamID yearID                                    \n",
+       "ANA    1997             0.773356  162  0.518519  \n",
+       "       1998             0.968823  162  0.524691  \n",
+       "       1999             1.112042  162  0.432099  \n",
+       "       2000             0.926651  162  0.506173  \n",
+       "       2001             0.727333  162  0.462963  \n",
+       "...                          ...  ...       ...  \n",
+       "WAS    2011             0.687989  161  0.496894  \n",
+       "       2012             0.827095  162  0.604938  \n",
+       "       2013             1.124096  162  0.530864  \n",
+       "       2014             1.240325  162  0.592593  \n",
+       "       2015             1.328240  162  0.512346  \n",
+       "\n",
+       "[888 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 246,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# General Team Data\n",
+    "teams = pd.read_csv('Kaggle/Teams.csv')[['yearID', 'teamID', 'name', 'attendance', 'G', 'W', 'L', 'R', 'RA']].dropna()\n",
+    "teams = teams.groupby(['teamID', 'yearID']).sum() # Sum isn't necesary with one piece of data, but it gets table into samed group format as others\n",
+    "teams['W%'] = teams['W'] / teams['G'] # Win rate\n",
+    "\n",
+    "# Joining tables together\n",
+    "aggregate_teams = team_batting.join(team_pitching).join(team_salaries).join(teams)\n",
+    "aggregate_teams['avg_runs_scored'] = aggregate_teams['R'] / aggregate_teams['G']\n",
+    "aggregate_teams['avg_runs_allowed'] = aggregate_teams['RA'] / aggregate_teams['G']\n",
+    "aggregate_teams = aggregate_teams[['name', 'AVG', 'OBP', 'SLG', 'OPS', 'avg_runs_scored', 'ERA', 'avg_runs_allowed', 'salary', 'salary/avg_salary', 'G', 'W%']].dropna()\n",
+    "aggregate_teams"
    ]
   }
  ],
